--- a/_config.yml
+++ b/_config.yml
@@ -181,7 +181,7 @@ collections:
   publications:
     output: true
     permalink: /:collection/:path/
-  portfolio:
+  seminars:
     output: true
     permalink: /:collection/:path/
   talks:
@@ -227,15 +227,13 @@ defaults:
       author_profile: true
       share: true
       comments: true
-  # _portfolio
+  # _seminars
   - scope:
       path: ""
-      type: portfolio
+      type: seminars
     values:
       layout: single
       author_profile: true
-      share: true
-      comment: true
   # _talks
   - scope:
       path: ""
