--- a/_config.yml
+++ b/_config.yml
@@ -106,14 +106,14 @@ author:
   orcid            : "https://orcid.org/0009-0005-2796-0954"
   pinterest        :
   soundcloud       :
-  stackoverflow    : "https://mathoverflow.net/users/477293"
+  stackoverflow    : # "https://mathoverflow.net/users/477293"
   steam            :
   tumblr           :
   twitter          :
   vine             :
   weibo            :
   xing             :
-  youtube          : "https://www.youtube.com/channel/UCEewbkM3mKpKdxWlmHW14zg"
+  youtube          : # "https://www.youtube.com/channel/UCEewbkM3mKpKdxWlmHW14zg"
   wikipedia        :
 
 
