--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Max Steinberg"
   avatar           : "profile.png"
-  bio              : "5th year undergraduate doing Representation Theory"
+  bio              : "1st year Ph.D. student doing Representation Theory"
   location         : "UCLA"
   employer         : "Olga Radko Endowed Math Circle"
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
