--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         : "Olga Radko Endowed Math Circle"
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : # "https://yourfullgooglescholarurl.com"
-  email            : "maxsteinberg@g.ucla.edu"
+  email            : "max.steinberg@yale.edu"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
