--- a/_config.yml
+++ b/_config.yml
@@ -83,8 +83,8 @@ author:
   name             : "Max Steinberg"
   avatar           : "profile.png"
   bio              : "1st year Ph.D. student doing Representation Theory"
-  location         : "UCLA"
-  employer         : "Olga Radko Endowed Math Circle"
+  location         : "Yale University"
+  employer         : #"Olga Radko Endowed Math Circle"
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : # "https://yourfullgooglescholarurl.com"
   email            : "max.steinberg@yale.edu"
